# python-rule-engine

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: operators.md  rules.md
src/python-rule-engine/: __init__.py
src/python_rule_engine/: __init__.py  decoder.py  engine.py  errors.py  exceptions.py  json_path.py  models.py  operators.py  utils.py
src/python_rule_engine/models/: condition.py  multi_condition.py  rule.py  simple_condition.py
tests/: conftest.py  test_jsonpath.py  test_operators.py  test_rule_decoder.py  test_rule_engine.py  test_simple_condition.py
tests/operators/: test_contains_operator.py  test_custom_operator.py  test_equal_operator.py  test_greater_than_inclusive_operator.py  test_greater_than_operator.py  test_in_operator.py  test_less_than_inclusive_operator.py  test_less_than_operator.py  test_not_contains_operator.py  test_not_equal_operator.py  test_not_in_operator.py
