[tool.poetry]
name = "python-rule-engine"
version = "0.2.1"
description = "A rule engine where rules are written in JSON format"
authors = ["Santiago Alvarez <santiago.salvarez@mercadolibre.com>"]
homepage = "https://github.com/santalvarez/python-rule-engine"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
keywords = ["rule-engine", "rules", "json", "python"]


[tool.poetry.dependencies]
python = "^3.7.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
