[metadata]
name = python-rule-engine
version = attr: python-rule-engine.__version__
url = https://github.com/santalvarez/python-rule-engine
license = MIT
author = Santiago Alvarez
author_email = santiagoalvarez264@gmail.com
description = A rule engine where rules are written in JSON format
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: python-rule-engine
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7.2

[options.packages.find]
where = src
